<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="@dimen/_2sdp"
        android:layout_margin="@dimen/_4sdp">
        
        <View
            android:id="@+id/rv_priority"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_6sdp"
            android:background="@color/tomato"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/rv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/_14ssp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:paddingVertical="@dimen/_2sdp"
                android:paddingHorizontal="@dimen/_6sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_bold"/>

            <TextView
                android:id="@+id/rv_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:textSize="@dimen/_13ssp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:paddingVertical="@dimen/_2sdp"
                android:paddingHorizontal="@dimen/_6sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_reg"/>

            <TextView
                android:id="@+id/rv_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textSize="@dimen/_12ssp"
                android:maxLines="3"
                android:ellipsize="marquee"
                android:paddingVertical="@dimen/_2sdp"
                android:paddingHorizontal="@dimen/_6sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_reg"/>

            <TextView
                android:id="@+id/rv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="@dimen/_10ssp"
                android:paddingVertical="@dimen/_2sdp"
                android:paddingHorizontal="@dimen/_6sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_bold"/>
            
        </LinearLayout>
        
    </androidx.cardview.widget.CardView>

</LinearLayout>