<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/noNoteTv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/nunito_reg"
        android:gravity="center"
        android:text="@string/no_notes_are_available"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/search_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:background="@drawable/un_filter_bg"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:src="@drawable/ic_filter_list" />

        <TextView
            android:id="@+id/noFilterTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:background="@drawable/un_filter_bg"
            android:fontFamily="@font/nunito_reg"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:text="@string/no_filter"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/HighToLowFilterTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:background="@drawable/un_filter_bg"
            android:fontFamily="@font/nunito_reg"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:text="@string/high_to_low"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/LowToHighFilterTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:background="@drawable/un_filter_bg"
            android:fontFamily="@font/nunito_reg"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:text="@string/low_to_high"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_notes_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_filter_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:contentDescription="@string/floating_add_button"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>