<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SplashScreenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_192sdp"
        android:layout_height="@dimen/_192sdp"
        android:layout_marginTop="@dimen/_92sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/note_mate_with_red" />

    <TextView
        android:id="@+id/appNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvectica"
        android:text="@string/app_name"
        android:textColor="@color/deepSkyBlue"
        android:textSize="@dimen/_23ssp"
        android:layout_marginTop="@dimen/_23sdp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvectica"
        android:text="@string/quick_note_taking_app"
        android:textColor="@color/tomato"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/appNameTV"
        app:layout_constraintStart_toStartOf="@+id/appNameTV"
        app:layout_constraintTop_toBottomOf="@+id/appNameTV" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_reg"
        android:text="@string/by_shivshakti_studio"
        android:textColor="@color/tomato"
        android:textSize="@dimen/_12ssp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>