<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".Activities.UpdateNoteActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/upTitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nunito_reg"
            android:hint="@string/title"
            android:maxLines="3"
            android:minHeight="@dimen/_30sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/upSubtitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nunito_reg"
            android:hint="@string/subtitle"
            android:minHeight="@dimen/_30sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/nunito_reg"
                android:gravity="center_vertical"
                android:text="@string/priority"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <ImageView
                android:id="@+id/upLowPriorityImg"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/low_priority"
                android:padding="@dimen/_2sdp" />

            <ImageView
                android:id="@+id/upMediumPriorityImg"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/medium_priority"
                android:padding="@dimen/_2sdp" />

            <ImageView
                android:id="@+id/upHighPriorityImg"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/high_priority"
                android:padding="@dimen/_2sdp" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/upNoteET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nunito_reg"
            android:gravity="start"
            android:hint="@string/note"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:minHeight="@dimen/_100sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:scrollbars="vertical"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </ScrollView>

    <ImageView
        android:id="@+id/upDoneImg"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/done_img_bg"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>